others/crackmes-one/glibc-2.34/build/conform/symlist-XPG42.err
In file included from /tmp/tmpy1ycjqh5/test.c:1:
/usr/lib/gcc/x86_64-linux-gnu/8/include/varargs.h:4:2: error: #error "GCC no longer implements <varargs.h>."
 #error "GCC no longer implements <varargs.h>."
  ^~~~~
/usr/lib/gcc/x86_64-linux-gnu/8/include/varargs.h:5:2: error: #error "Revise your code to use <stdarg.h>."
 #error "Revise your code to use <stdarg.h>."
  ^~~~~
/tmp/tmpdcbw2ntq/test.c:1:10: fatal error: ndbm.h: No such file or directory
 #include <ndbm.h>
          ^~~~~~~~
compilation terminated.
